updateref List -> ImmutableList